YUK-6607 Cap Control magnifying glass view is very slow
Changes to accommodate updater changes